--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,14 +2,16 @@
 name = "python-template"
 version = "0.1.0"
 requires-python = ">=3.12"
-dependencies = ["pytest>=8.3.5"]
+dependencies = ["pytest>=8.4.1"]
 
 [tool.pytest.ini_options]
 pythonpath = "src"
 
 [tool.ruff]
-target-version = "py312"
 line-length = 120
+target-version = "py312"
+
+[tool.ruff.lint]
 select = [
     "E",   # pycodestyle
     "W",   # pyflakes
@@ -18,3 +20,9 @@ select = [
     "SIM", # flake8-simplify
     "RUF", # ruff
 ]
+# select = [ "F", "I", "N",  "A", "C4"]
+ignore = ["E501"] # Line too long (handled by formatter)
+
+[tool.ruff.format]
+quote-style = "double"
+indent-style = "space"
